log
Fri 29 Mar 2024 09:41:04 PM UTC: 
 tests:  0|6
total_score: 0/70
217f712
Fri 29 Mar 2024 10:32:41 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:8: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   35 |    list->size=0;
      |        ^~
Compilation failed
e96167b
Fri 29 Mar 2024 10:35:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
413c517
Fri 29 Mar 2024 10:37:59 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:41: error: ‘Node’ has no member named ‘key’
   43 |   if(list->current) return list->current->key;
      |                                         ^~
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b1a9003
Fri 29 Mar 2024 10:38:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7bfb739
Fri 29 Mar 2024 10:40:30 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
c465490
Fri 29 Mar 2024 10:42:11 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
8b77099
Fri 29 Mar 2024 10:44:31 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:49:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   49 |   if (list->current !=NULL)
      |   ^~
list.c:51:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   51 |     return list->current->data;
      |     ^~~~~~
list.c:52:3: error: ‘else’ without a previous ‘if’
   52 |   else return NULL;
      |   ^~~~
cc1: all warnings being treated as errors
Compilation failed
5d48a4d
Fri 29 Mar 2024 10:45:00 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
eff46e0
Fri 29 Mar 2024 10:45:30 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
6b60bac
Fri 29 Mar 2024 10:47:34 PM UTC: 
 list.c | 9 ---------
 1 file changed, 9 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b996a42
Fri 29 Mar 2024 10:47:44 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
d55d9f3
